--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
+    "cheerio": "^1.0.0-rc.12",
+    "expo": "^49.0.21",
     "expo-status-bar": "~1.6.0",
     "express": "^4.18.2",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "request-promise": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
